<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".secondScreen">

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="50dp"
        android:id="@+id/android"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/material_dynamic_primary60"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/android_development" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="50dp"
        android:id="@+id/web"
        app:cardCornerRadius="15dp"
        android:layout_toRightOf="@+id/android"
        app:cardBackgroundColor="@color/material_dynamic_primary60"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/web_development" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="50dp"
        android:id="@+id/ios"
        app:cardCornerRadius="15dp"
        android:layout_below="@+id/android"
        app:cardBackgroundColor="@color/material_dynamic_primary60"
        >
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/ios_development" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="50dp"
        android:id="@+id/ml"
        app:cardCornerRadius="15dp"

        android:layout_toRightOf="@+id/ios"
        android:layout_below="@+id/web"
        app:cardBackgroundColor="@color/material_dynamic_primary60"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/ml" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="50dp"
        android:id="@+id/blockchain"
        app:cardCornerRadius="15dp"

        android:layout_below="@+id/ios"
        app:cardBackgroundColor="@color/material_dynamic_primary60"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/Block_Chain" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="50dp"
        android:id="@+id/cn"
        app:cardCornerRadius="15dp"

        android:layout_below="@+id/ml"
        android:layout_toRightOf="@+id/blockchain"
        app:cardBackgroundColor="@color/material_dynamic_primary60"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/cn" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/callButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Call Us"
        android:textSize="25dp"
        android:layout_below="@+id/blockchain"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>